# P-ai

./: AGENT.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  conversation.rs  memory_matcher.rs  model_runtime.rs  storage_and_stt.rs  windowing.rs
src-tauri/src/features/: delegate.rs  remote_im.rs  remote_im_adapters.rs  tests.rs
src-tauri/src/features/chat/: conversation.rs  message_semantics.rs  model_runtime.rs  prompt_manager.rs  scheduler.rs  tests.rs
src-tauri/src/features/chat/conversation_service/: core.rs  delegate.rs  mutations.rs  reads.rs  scheduler.rs  types.rs
src-tauri/src/features/chat/message_store/: active_plan.rs  jsonl_snapshot.rs  meta.rs  migration.rs  mod.rs  paths.rs  persist.rs  store.rs
src-tauri/src/features/chat/model_runtime/: provider_and_stream.rs  runtime_abstractions.rs  (+1 more)
src-tauri/src/features/config/: app_data_layout.rs  storage_and_stt.rs  tests.rs
src-tauri/src/features/core/: domain.rs
src-tauri/src/features/delegate/: conversation_store.rs  runtime.rs
src-tauri/src/features/mcp/: commands.rs  parser.rs  runtime_manager.rs
src-tauri/src/features/memory/: matcher.rs  providers.rs  store.rs  tests.rs
src-tauri/src/features/remote_im/: tests.rs
src-tauri/src/features/system/: commands.rs  sandbox.rs  tests.rs  tools.rs  updater.rs  windowing.rs
src-tauri/src/features/task/: scheduler.rs
(+231 files in other folders)
