[package]
name = "easy-call-ai"
version = "0.1.0"
edition = "2021"
description = "Easy Call AI desktop app"
default-run = "easy-call-ai"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
time = "=0.3.36"
rig = { package = "rig-core", version = "0.30.0" }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
uuid = { version = "1", features = ["v4"] }
scraper = "0.20"
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
